Introduced new exception. Code work.